Work2/w2/test/1_1.cpp
#include <iostream>

int main() {
    cout << "Hello";
}

// error: 'cout' was not declared in this scope; did you mean 'std::cout'?
//  ไม่รู้จักคำสั่ง cout